dernière correction mobile responsive

--- a/style.css
+++ b/style.css
@@ -24,10 +24,18 @@ body
 
 header
 {
-display: flex;
-flex-direction: row;
-justify-content: space-between;
-align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav
+{
+    /*display: flex;
+    flex-direction: row;
+    justify-content: space-between;*/
+    width: 45%;
 }
 
 nav ul
@@ -36,18 +44,18 @@ nav ul
     padding-left: 2px;
     list-style-type:none;
     justify-content: space-around;
+    text-align: center;
 }
 
 nav ul li
 {
-   /* margin-left: 100px;
-    margin-right: 20px;
+    display: inline-block; /************************** pour tth ******************************/
+   
     padding-top: 20px;
-    text-decoration-line: none;*/
-    margin-left: 20px;
-    margin: right 30px;
+    text-decoration-line: none;
+    margin: 5%;
     padding-top: 30px;
-    text-align: start;
+    text-align: center;
 }
 
 .navheb
@@ -56,18 +64,27 @@ nav ul li
     border-top: blue solid 2px;
     padding-left: 9px;
     padding-right:9px;
-    padding-top: 15px;
+    padding-top: 25px;
     text-decoration-line: none;
 }
 
 .navinsc
 {
     color: blue;
-    font-weight: bolder;
+    font-weight: bolder;  
+    
 }
+
+.saut
+{
+    display: flex;
+    flex-direction: row;
+
+}
+
 .activity
 {
-    color: blue;
+    color: black;
 }
 
 /*   Section trouv_vacances  */
@@ -173,7 +190,7 @@ nav ul li
 
 .element_filtre:hover
 {
-    background-color:linen;
+    background-color:rgb(42, 8, 85);
 }
 
 .fa-money-bill-wave, .fa-child,  .fa-heart, .fa-dog
@@ -251,6 +268,7 @@ nav ul li
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    justify-content: flex-start;
 }
 
 .heb_enf_zen
@@ -516,7 +534,7 @@ nav ul li
 }
 
 /* version responsive */
-@media screen and (max-width:480px)
+@media screen and (max-width:468px)
 {
 body
 {
@@ -560,12 +578,6 @@ nav ul
     padding-left: 0px;
     border-top:hidden;
 }
-/*nav a
-{
-    margin-left: 0%;
-    display:inline-block 
-    justify-content:space-evenly;
-}*/
 
 .glob_filtres
 {
@@ -574,13 +586,6 @@ nav ul
     align-items: flex-start;
     text-align: left;
 }
-
-/*.glob_filtres h2
-
-{
-    font-size: 20px;
-    margin-left: 12%;
-}*/
 
 .filtres
 {
@@ -595,29 +600,10 @@ nav ul
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    /*justify-content: space-between;*/
+    justify-content: space-between;
     
 }
 
-/*.choix_filtres
-{
-    padding: 20px;
-    padding-bottom: 4%;
-}
-.element_filtre 
- {
-    padding-bottom: 6px;
-    padding-top: 6px;
-    padding-right: 7x;
-    border: 1px solid #F2F2F2;
-    border-radius:15px;
-    text-decoration-line: none;  
-}
-
-.element_filtre:hover
-{
-    background-color:cornflowerblue ;
-}*/
 .heb_marseille
 {
     display: flex;
@@ -628,14 +614,12 @@ nav ul
 {
     width: 100%;
 }
-.heb_enf
-{
-    justify-content: flex-start;
-}
+
 .ligne1
 {
     display: flex;
     flex-direction: column;
+    
 }
 .ligne2
 {
@@ -643,38 +627,11 @@ nav ul
     flex-direction: column;
 }
 
-.popul_cont{
+.popul_cont
+{
     width: 100%;
     margin-bottom: 10%;
 }
-/*.fa-money-bill-wave, .fa-child,  .fa-heart, .fa-dog
-{
-    color: green;
-    border-radius: 80%;
-    padding: 3px;
-    background-color:aquamarine; 
-}
-
-.f_info
-{
-    width: 75%;  
-}
-
-.heb_marseille
-{
-    /*flex-direction: column-reverse;
-    width: 100%;   
-}*/
-
-/*.heberg_cont
-{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    background-color: white;
-}
-
-
 
 .fa-chart-line
 {
@@ -686,31 +643,39 @@ nav ul
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-}*/
+}
+
+.image_heberg
+{
+    width: 100%;
+    height: 155px;
+    border-radius: 14px;
+}
 
 .heb_enf_zen
 {
-    width: 300px /*100%*/;  
+    width: 370px;  
+    height: 240px;
 }
 
 .pop_enf_zen
 {
-    margin-left: 1%;
+    border-radius: 20px;
+    margin: 1px;
+    background-color: white;
+    width: 350px;
+    height: 150px;
+    margin-left: 15px;
 }
 
 .image_activ , .image_activ_0, .image_activ_1, .image_activ_2
 {
     width: 100%;
-    height: auto;
+    height: 150px;
 }
 
-/*.activ_enf
-{
-    width: 100%;  
-}*/
 .piedpage
 {
-    /*width: 100%;*/
     display: flex;
     flex-direction: column;
     justify-content: center;
